# WebPortfolioBuilder

./: .gitignore  AGENTS.md  Cargo.toml  README.md  asset_pipeline_test.go  assets.go  bundles.go  cli.go  cli_test.go  config.go  config.json  config_loader_test.go  fs.go  go.mod  html.go  html_test.go  main.go  package.json  render.go  render_test.go  routing.go  routing_test.go  serve.go  serve_test.go  strict.go  strict_test.go  types.go  widget_render.go  widget_render_test.go  widget_scripts_test.go
KometaWebsite/: game-swiper.js  index.html  scroll-reveal.js  split-widget.js  styles.css
Specs/: Changelog.md  Effort.md  ExecutionPlan.md  (+3 more)
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_integration.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: assets.rs  bundles.rs  config.rs  error.rs  fs_util.rs  html.rs  lib.rs  render.rs  routing.rs  serve.rs  strict.rs  theme.rs  types.rs  widgets.rs
crates/core/tests/: README.md  assets.rs  build_pipeline.rs  bundles.rs  config_loader.rs  fs_util.rs  golden_fixtures.rs  golden_parity.rs  html_footer.rs  render_page_data.rs  routing.rs  strict_mode.rs  widget_render.rs  widget_scripts.rs
crates/core/tests/common/: mod.rs
crates/core/tests/golden/demo/: index.html
crates/core/tests/golden/demo/about/: index.html
crates/core/tests/golden/demo/apps/: index.html
crates/core/tests/golden/kometa/: index.html
crates/core/tests/golden/my-studio/: index.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  content_watcher.rs  diagnostics.rs  lib.rs  preview_server.rs  settings.rs  site_ops.rs  site_template.rs  studio_files.rs
src-tauri/tests/: commands_integration.rs  studio_files.rs
(+106 files in other folders)
