[package]
name = "portfoliowebsitebuilder-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Portfolio site bundle load, validate, and render (Phase 1)"

[lib]
path = "src/lib.rs"

[dependencies]
minijinja = { version = "2", features = ["loader"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
ctrlc = "3"
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3"
similar = "2"
